Bug 293711 - missing icon in System Settings
Summary: missing icon in System Settings
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Control Module (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords:
: 289069 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-02-09 12:50 UTC by Christopher Yeleighton
Modified: 2012-02-28 11:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
Network Manager Help menu with About command disabled (22.23 KB, image/png)
2012-02-09 16:34 UTC, Christopher Yeleighton
Details
Network Settings missing Network Manager icon (58.97 KB, image/png)
2012-02-09 16:36 UTC, Christopher Yeleighton
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christopher Yeleighton 2012-02-09 12:50:13 UTC
Version:           unspecified (using KDE 4.7.2) 
OS:                Linux

The icon for the Network Manager module in System Settings is missing

Reproducible: Always

Steps to Reproduce:
  1. Tell System Settings to open the Network Manager module.
  2. Tell the Network Manager module to tell about itself.

Actual Results:  
  1. The Icon View pane displays the missing icon.
  2. Command disabled.

Expected Results:  
  1. Some icon appropriate for Network Manager.
  2. A dialogue box about the Network Manager.

OS: Linux (x86_64) release 3.1.9-1.4-desktop
Compiler: gcc

kcm_networkmanager.desktop has Icon=networkmanager
Comment 1 Lamarque V. Souza 2012-02-09 13:26:06 UTC
Can you send me a screenshot of the problems? I do not see any missing icon here and how do you "tell Network Manager module to tell about itself"?
Comment 2 Christopher Yeleighton 2012-02-09 16:34:32 UTC
Created attachment 68651 [details]
Network Manager Help menu with About command disabled
Comment 3 Christopher Yeleighton 2012-02-09 16:36:17 UTC
Created attachment 68652 [details]
Network Settings missing Network Manager icon
Comment 4 Christopher Yeleighton 2012-02-09 16:41:22 UTC
(In reply to comment #3)
> Created an attachment (id=68652) [details]
> Network Settings missing Network Manager icon

The icon used for the other modules is named preferences-system-network
Comment 5 Lamarque V. Souza 2012-02-09 17:21:16 UTC
Git commit 786d367e9d18a067f1ec1b474b0f843bd8bec697 by Lamarque V. Souza.
Committed on 09/02/2012 at 18:14.
Pushed by lvsouza into branch 'master'.

Add about data for kcm modules. You can see it in systemsettings by
selecting "Network Settings" -> "Network Connection" -> clicking on the
button with a '?' and then on "About Manage Connections" menu.

M  +10   -0    settings/config/manageconnectionwidget.cpp
M  +11   -0    settings/config/managetraywidget.cpp

http://commits.kde.org/networkmanagement/786d367e9d18a067f1ec1b474b0f843bd8bec697
Comment 6 Lamarque V. Souza 2012-02-09 17:21:16 UTC
Git commit eb1cd4a9190fa3b0262d65d350fb6e1d9828e9e4 by Lamarque V. Souza.
Committed on 09/02/2012 at 18:14.
Pushed by lvsouza into branch 'nm09'.

Add about data for kcm modules. You can see it in systemsettings by
selecting "Network Settings" -> "Network Connection" -> clicking on the
button with a '?' and then on "About Manage Connections" menu.

M  +10   -0    settings/config/manageconnectionwidget.cpp
M  +10   -0    settings/config/managetraywidget.cpp

http://commits.kde.org/networkmanagement/eb1cd4a9190fa3b0262d65d350fb6e1d9828e9e4
Comment 7 Lamarque V. Souza 2012-02-09 17:22:20 UTC
We install the networkmanager.png file mentioned in kcm_networkmanager.desktop. It the package does not include it then it is downstream bug and you should contact your distribution mantainers to fix it.
Comment 8 Lamarque V. Souza 2012-02-13 12:23:02 UTC
Git commit 5a2669f151e65dca5adededade2b30cc40dc7c0f by Lamarque V. Souza.
Committed on 13/02/2012 at 13:14.
Pushed by lvsouza into branch 'KDE/4.8'.

Always install networkmanager.png icons regardless which backend is
going to be compiled (networkmanager-0.7 or networkmanager_fake-0.9).
networkmanager_fake-0.9 does not install any icon, then when using
Plasma NM from branch nm09 there is no icon for it. Plasma NM's master
branch currently installs the icons, I will remove them from master
branch to prevent conflicts with this commit.
(cherry picked from commit e5a73150a2bf9a0b0e4c3520c89ec981a097f333)

M  +1    -0    solid/CMakeLists.txt
R  +-    --    solid/icons/ox22-app-networkmanager.png [from: solid/networkmanager-0.7/ox22-app-networkmanager.png - 100% similarity]
R  +-    --    solid/icons/ox32-app-networkmanager.png [from: solid/networkmanager-0.7/ox32-app-networkmanager.png - 100% similarity]
R  +-    --    solid/icons/ox64-app-networkmanager.png [from: solid/networkmanager-0.7/ox64-app-networkmanager.png - 100% similarity]
M  +0    -2    solid/networkmanager-0.7/CMakeLists.txt
M  +0    -2    solid/networkmanager_fake-0.9/CMakeLists.txt

http://commits.kde.org/kde-workspace/5a2669f151e65dca5adededade2b30cc40dc7c0f
Comment 9 Lamarque V. Souza 2012-02-13 12:23:02 UTC
Git commit e5a73150a2bf9a0b0e4c3520c89ec981a097f333 by Lamarque V. Souza.
Committed on 13/02/2012 at 13:14.
Pushed by lvsouza into branch 'master'.

Always install networkmanager.png icons regardless which backend is
going to be compiled (networkmanager-0.7 or networkmanager_fake-0.9).
networkmanager_fake-0.9 does not install any icon, then when using
Plasma NM from branch nm09 there is no icon for it. Plasma NM's master
branch currently installs the icons, I will remove them from master
branch to prevent conflicts with this commit.

M  +1    -0    solid/CMakeLists.txt
R  +-    --    solid/icons/ox22-app-networkmanager.png [from: solid/networkmanager-0.7/ox22-app-networkmanager.png - 100% similarity]
R  +-    --    solid/icons/ox32-app-networkmanager.png [from: solid/networkmanager-0.7/ox32-app-networkmanager.png - 100% similarity]
R  +-    --    solid/icons/ox64-app-networkmanager.png [from: solid/networkmanager-0.7/ox64-app-networkmanager.png - 100% similarity]
M  +0    -2    solid/networkmanager-0.7/CMakeLists.txt
M  +0    -2    solid/networkmanager_fake-0.9/CMakeLists.txt

http://commits.kde.org/kde-workspace/e5a73150a2bf9a0b0e4c3520c89ec981a097f333
Comment 10 Lamarque V. Souza 2012-02-28 11:04:34 UTC
*** Bug 289069 has been marked as a duplicate of this bug. ***