Add about data for kcm modules. You can see it in systemsettings by selecting "Network Settings" -> "Network Connection" -> clicking on the button with a '?' and then on "About Manage Connections" menu.

BUG: 293711